--- a/style.css
+++ b/style.css
@@ -1,37 +1,43 @@
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-
 body{
-    margin-top: 100px;
+    margin: 10px auto;
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-#error{
-   color: red;
-}
-body input{
-    margin-top: 50px;
-    padding: 5px;
-}
 
-body button{
-    margin-top: 20px;
-    padding: 4px;
+}
+.memeContainer{
+    max-width: 500px;
+    background-color: antiquewhite;
+    padding: 24px;
+    border-radius: 8px;
+    margin-inline: auto;
+
+}
+.memeImg{
+    border-radius: 8px;
+    width: 100%;
+    margin-top: 10px;
+}
+.memeTitle{
+    margin-bottom: 10px;
+}
+.memeAuthor{
+    text-align: start;
+}
+button{
+    padding: 10px 16px;
+    border-radius: 8px;
+    outline: none;
+    border: none;
+    background-color: rgb(24, 159, 89);
+    color: rgb(27, 77, 17);
+    font-size: 20px;
+    margin-bottom: 10px;
     cursor: pointer;
-    font-weight: 500;
-    font-size: 15px;
 }
-#resetBtn{
-    display: none;
-    color: red;
-}
-h4{
-    margin-top: 20px;
-    color: grey;
+button:active{
+    background-color: rgb(22, 130, 74);
 }
